tests/error/wasm_errors/wasm_fn_without_module.err
Error: WASM signature error (at $FILE:7:4)
  | 
5 | class Foo:
6 |     @wasm
7 |     def bar(self: "Foo") -> None: ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ First argument to WASM function should be a WASM module.
  | 
7 |     def bar(self: "Foo") -> None: ...
  |     --------------------------------- Found `Foo` instead.

Guppy compilation failed due to 1 previous error
